--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/pf-beausans-pro');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
