--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,6 @@ header {
   align-items: center;
   transition: all 0.3s ease;
 }
-
 .default_icon_btn img {
   max-width: 48px;
 }
@@ -146,6 +145,19 @@ header {
   transition: all 0.3s ease;
 }
 
+@media screen and (max-width: 600px) {
+  .default_icon_btn {
+    border-radius: 7px;
+    min-width: 38px;
+    max-width: 38px;
+    min-height: 38px;
+    max-height: 38px;
+    transition: all 0.3s ease;
+  }
+  .default_icon_btn img {
+    max-width: 38px;
+  }
+}
 .button_loading {
   color: #FFF100 !important;
   border: 1px solid #fff100;
