--- a/src/index.scss
+++ b/src/index.scss
@@ -139,14 +139,33 @@ header {
   align-items: center;
 
   transition: all 0.3s ease;
+  img{
+    max-width: 48px;
+  }
 }
-.default_icon_btn img{
-  max-width: 48px;
-}
+
 .default_icon_btn:hover{
   background: rgb(210, 199, 6);
   transition: all 0.3s ease;
 }
+
+@media screen and (max-width: 600px) {
+  .default_icon_btn{
+    border-radius: 7px;
+  
+    min-width: 38px;
+    max-width: 38px;
+    min-height: 38px;
+    max-height: 38px;
+
+    transition: all 0.3s ease;
+    img{
+      max-width: 38px;
+    }
+  }
+
+}
+
 
 .button_loading {
   color: #FFF100 !important;
