--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,8 @@ body {
   background: #0D0D0D;
   color: #0D0D0D;
   overflow-x: hidden;
+
+  min-height: 100vh;
 }
 
 code {
@@ -49,6 +51,18 @@ header {
   /* box-shadow: -5px 5px 20px 0px rgba(255, 255, 255, 0.09) inset;
   color: #0D0D0D; */
 }
+button {
+  cursor: pointer;
+}
+
+button, button img, a img{
+  -webkit-user-select: none!important;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 
 .wrapper {
   max-width: 1600px;
@@ -58,9 +72,14 @@ header {
 
 .wrapper-content {
   max-width: 1600px;
-  padding: 12rem 15px;
+  // padding: 12rem 15px;
+  padding: 10rem 15px 6rem 15px;
   margin: 0 auto;
+
   /* padding: 0 15px */
+  @media screen and (max-width: 920px) {
+    padding: 8rem 15px 6rem 15px;
+  }
 }
 
 .background-image-black {
@@ -110,43 +129,95 @@ header {
   background: radial-gradient(farthest-side at top left, transparent 97%, #FFF100) bottom left;
 }
 
-.default_btn {
-  cursor: pointer;
+
+.filter_btn{
+  color: rgb(13, 13, 13);
+  font-family: "Orbitron", sans-serif;
+  font-size: 16px;
+  line-height: 100%;
+  font-weight: 800;
+  border-radius: 10px;
+  border: 1px solid rgb(255, 241, 0);
+  color: rgb(255, 241, 0);
+  padding: 12px 16px;
+  text-align: center;
+  transition: all .3s ease;
+  width: fit-content;
+  @media screen and (max-width: 920px) {
+    font-size: 12px;
+  }
+  &.active{
+    background: rgb(255, 241, 0);
+    color: rgb(13, 13, 13);
+    transition: all .3s ease;
+  }
+  &:hover{
+    background: rgb(207, 196, 3);
+    border: 1px solid rgb(207, 196, 3);
+    color: rgb(13, 13, 13);
+    transition: all .3s ease;
+  }
+}
+
+.black_btn{
+  width: 100%;
+  background: rgb(13, 13, 13);
+  color: rgb(255, 241, 0);
+  text-align: center;
+  font-family: "Orbitron", sans-serif;
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: 600;
+  border-radius: 48px;
+  padding: 12px 0;
+  transition: all .2s ease;
+  @media screen and (max-width: 920px) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+  &:disabled{
+    color: rgb(137, 137, 137);
+    background: rgb(27, 27, 27);
+  }
+  &:hover{
+    background: rgb(27, 27, 27);
+    transition: all .2s ease;
+  }
+}
+
+.yellow_btn {
   color: rgb(13 13 13);
   width: 100%;
   height: 100%;
   padding: 0.5rem 2rem;
-  font-size: 1.25rem
-    /* 20px */
-  ;
-  line-height: 1.75rem
-    /* 28px */
-  ;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   font-weight: 700;
-  /* height: 2.75rem; */
   border: none;
   border-radius: 0.5rem;
   font-family: "Orbitron", sans-serif;
   text-align: center;
   background: #FFF100;
   transition: all 0.3s ease;
+
+  @media screen and (max-width: 920px) {
+    .yellow_btn {
+      padding: 0.5rem 1rem;
+      width: 100%;
+    }
+  }
 }
 
-.default_btn:hover {
+.yellow_btn:hover {
   background: rgb(210, 199, 6);
   transition: all 0.3s ease;
 }
 
 
-.default_icon_btn {
+.yellow_icon_btn {
   background: #FFF100;
-  font-size: 1.25rem
-    /* 20px */
-  ;
-  line-height: 1.75rem
-    /* 28px */
-  ;
-  cursor: pointer;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   border-radius: 10px;
 
   min-width: 48px;
@@ -172,12 +243,8 @@ header {
 
 .mobile_icon_button {
   background: #FFF100;
-  font-size: 1.25rem
-    /* 20px */
-  ;
-  line-height: 1.75rem
-    /* 28px */
-  ;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
   cursor: pointer;
   border-radius: 10px;
 
@@ -192,20 +259,7 @@ header {
 
   transition: all 0.3s ease;
 
-  img {
-    max-width: 48px;
-  }
-
-  &:hover {
-    background: rgb(210, 199, 6);
-    transition: all 0.3s ease;
-  }
-}
-
-
-
-@media screen and (max-width: 600px) {
-  .default_icon_btn {
+  @media screen and (max-width: 600px) {
     border-radius: 7px;
 
     min-width: 38px;
@@ -220,16 +274,25 @@ header {
     }
   }
 
+  img {
+    max-width: 48px;
+  }
 
-
-}
-
-@media screen and (max-width: 920px) {
-  .default_btn {
-    padding: 0.5rem 1rem;
-    width: 100%;
+  &:hover {
+    background: rgb(210, 199, 6);
+    transition: all 0.3s ease;
   }
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -299,7 +362,7 @@ header {
   justify-content: space-between;
   gap: 40px;
 
-  .default_icon_btn {
+  .yellow_icon_btn {
     max-width: 42px;
     max-height: 42px;
     min-width: 42px;
@@ -310,43 +373,97 @@ header {
     }
   }
 }
+
 @media screen and (min-width: 920px) {
-  #mob_menu{
+  #mob_menu {
     display: none;
   }
 }
+
 @media screen and (max-width: 920px) {
+
   .mob_element_open {
     transform: translateX(0vw);
-  
+
     @include keyframes(openMobElement) {
       from {
         transform: translateX(100vw);
       }
-  
+
       to {
         transform: translateX(0vw);
       }
-  
+
     }
-  
+
     @include animate(openMobElement, 0.5s, ease, 1);
   }
-  
+
   .mob_element_close {
     transform: translateX(100vw);
+
     @include keyframes(closeMobElement) {
       from {
         transform: translateX(0vw);
       }
-      
+
       to {
         transform: translateX(100vw);
       }
-  
+
     }
-  
+
     @include animate(closeMobElement, 0.5s, ease, 1);
   }
+
 }
 
+
+
+#error-page {
+  position: relative;
+  height: 100vh;
+
+  &::before,
+  &::after {
+    display: block;
+    content: '';
+    background: url('/src/images/big-black-shards.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    max-width: 50%;
+    z-index: -1;
+
+    @media screen and (max-width: 700px) {
+      max-width: 80%;
+    }
+  }
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  &::after {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transform: rotate(180deg);
+  }
+
+  .yellow_btn {
+    width: 100%;
+    max-width: 500px;
+    font-size: 24px;
+    padding: 24px 0px;
+
+    @media screen and (max-width: 700px) {
+      font-size: 16px;
+      padding: 16px 0px;
+    }
+  }
+
+}
