--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #0D0D0D;
+  background: #0D0D0D;
+
   overflow: inherit;
 }
 
@@ -59,6 +61,8 @@ header {
 .background-image-yellow {
   background-image: url("./images/yellowbg.png");
   background-repeat: no-repeat;
+  background-size: contain;
+  background-size: 50% 20%;
   background-position: top right;
 }
 
