--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,9 @@ button {
   cursor: pointer;
 }
 
-button, button img, a img {
+button,
+button img,
+a img {
   -webkit-user-select: none !important;
   -moz-user-select: none;
   user-select: none;
@@ -76,8 +78,6 @@ button, button img, a img {
 .background-image-yellow {
   background-image: url("./images/yellowbg.png");
   background-repeat: no-repeat;
-  background-size: contain;
-  background-size: 50% 20%;
   background-position: top right;
 }
 
@@ -196,6 +196,32 @@ button, button img, a img {
     padding: 0.5rem 1rem;
     width: 100%;
   }
+}
+
+.gray_btn {
+  color: rgb(13, 13, 13);
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 2rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  border: none;
+  border-radius: 0.5rem;
+  font-family: "Orbitron", sans-serif;
+  text-align: center;
+  background: #898989;
+  transition: all 0.3s ease;
+}
+@media screen and (max-width: 920px) {
+  .gray_btn .gray_btn {
+    padding: 0.5rem 1rem;
+    width: 100%;
+  }
+}
+.gray_btn:hover {
+  background: #626262;
+  transition: all 0.3s ease;
 }
 
 .yellow_btn:hover {
@@ -362,6 +388,7 @@ button, button img, a img {
 #error-page {
   position: relative;
   height: 100vh;
+  width: 100vw;
 }
 #error-page::before, #error-page::after {
   display: block;
