--- a/src/index.css
+++ b/src/index.css
@@ -303,18 +303,19 @@ a img {
   width: 20px;
   height: 20px;
   border-radius: 500px;
+  overflow: hidden;
   position: absolute;
-  background: rgb(13, 13, 13);
+  background: inherit;
   animation: loadingAnimation 4s ease-out infinite;
 }
 
 @keyframes loadingAnimation {
   0% {
-    top: -20%;
+    top: -10%;
     left: -3%;
   }
   35% {
-    top: -20%;
+    top: -10%;
     left: 97%;
   }
   45% {
@@ -326,7 +327,7 @@ a img {
     left: -3%;
   }
   100% {
-    top: -20%;
+    top: -10%;
     left: -3%;
   }
 }
