--- a/src/index.css
+++ b/src/index.css
@@ -180,15 +180,14 @@ a img {
   color: rgb(13, 13, 13);
   width: 100%;
   height: 100%;
-  padding: 0.5rem 2rem;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
   font-weight: 700;
-  border: none;
-  border-radius: 0.5rem;
   font-family: "Orbitron", sans-serif;
   text-align: center;
   background: #FFF100;
+  transition: all 0.3s ease;
+}
+.yellow_btn:hover {
+  background: rgb(210, 199, 6);
   transition: all 0.3s ease;
 }
 @media screen and (max-width: 920px) {
@@ -221,11 +220,6 @@ a img {
 }
 .gray_btn:hover {
   background: #626262;
-  transition: all 0.3s ease;
-}
-
-.yellow_btn:hover {
-  background: rgb(210, 199, 6);
   transition: all 0.3s ease;
 }
 
@@ -288,25 +282,27 @@ a img {
 }
 
 .button_loading {
-  color: #FFF100 !important;
-  border: 1px solid #fff100;
   position: relative;
-  background-color: #0D0D0D !important;
+  overflow: hidden;
+  box-sizing: border-box;
+  background: #FFF100;
 }
-
-.button_loading:hover {
-  background: #0D0D0D !important;
-}
-
 .button_loading::before {
   content: "";
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   border-radius: 500px;
   overflow: hidden;
   position: absolute;
-  background: inherit;
-  animation: loadingAnimation 4s ease-out infinite;
+  background: #0D0D0D;
+  animation: loadingAnimation 3s ease-out infinite;
+}
+.button_loading button {
+  background: rgb(13, 13, 13);
+  color: #fff100;
+  height: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 @keyframes loadingAnimation {
