--- a/src/index.scss
+++ b/src/index.scss
@@ -39,7 +39,7 @@ code {
 html,
 body,
 #root {
-  height: 100%;
+  // height: 100%;
   /* overflow: hidden; */
 }
 
@@ -129,7 +129,7 @@ a img {
   left: 0;
   bottom: -20px;
   height: 20px;
-  width: 20px;
+  width: 21px;
   background: radial-gradient(farthest-side at bottom right, transparent 97%, rgb(13, 13, 13)) bottom left;
 }
 
@@ -139,7 +139,7 @@ a img {
   right: -20px;
   top: 0;
   height: 20px;
-  width: 20px;
+  width: 21px;
   background: radial-gradient(farthest-side at bottom right, transparent 97%, rgb(13, 13, 13)) bottom left;
 }
 
@@ -318,10 +318,10 @@ a img {
   @media screen and (max-width: 600px) {
     border-radius: 7px;
 
-    min-width: 38px;
-    max-width: 38px;
-    min-height: 38px;
-    max-height: 38px;
+    min-width: 44px;
+    max-width: 44px;
+    min-height: 44px;
+    max-height: 44px;
 
     transition: all 0.3s ease;
 
