--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ html,
 body,
 #root {
   /* overflow: hidden; */
+  overflow-x: hidden;
 }
 
 #root {
@@ -78,26 +79,16 @@ a img {
   background-image: url("./images/yellowbg.png");
   background-repeat: no-repeat;
   background-position: top right;
-  background-size: calc(50% - 1vw) calc(30% - 1vw);
+  background-size: 50%;
 }
-@media (max-width: 1300px) {
+@media (max-width: 620px) {
   .background-image-yellow {
-    background-size: 50% 20%;
+    background-size: 70%;
   }
 }
-@media (max-width: 1000px) {
+@media (max-width: 450px) {
   .background-image-yellow {
-    background-size: 60% 20%;
-  }
-}
-@media (max-width: 600px) {
-  .background-image-yellow {
-    background-size: 60% 10%;
-  }
-}
-@media (min-width: 1920px) {
-  .background-image-yellow {
-    background-size: 50vw 60vh;
+    background-size: 90%;
   }
 }
 
@@ -212,7 +203,6 @@ a img {
 }
 @media screen and (max-width: 920px) {
   .yellow_btn .yellow_btn {
-    padding: 0.5rem 1rem;
     width: 100%;
   }
 }
@@ -314,12 +304,13 @@ a img {
   border-radius: 500px;
   overflow: hidden;
   position: absolute;
-  background: #0D0D0D;
+  background: #0D0D0D !important;
   animation: loadingAnimation 3s ease-out infinite;
 }
 .button_loading button {
   background: rgb(13, 13, 13);
   color: #fff100;
+  background: #0D0D0D !important;
   height: 100%;
   position: relative;
   z-index: 1;
@@ -378,7 +369,7 @@ a img {
 }
 @media screen and (max-width: 920px) {
   .mob_element_open {
-    transform: translateX(0vw);
+    transform: translateX(0px);
     animation: openMobElement 0.5s ease 1;
   }
   @keyframes openMobElement {
@@ -386,7 +377,7 @@ a img {
       transform: translateX(100vw);
     }
     to {
-      transform: translateX(0vw);
+      transform: translateX(0px);
     }
   }
   .mob_element_close {
@@ -395,7 +386,7 @@ a img {
   }
   @keyframes closeMobElement {
     from {
-      transform: translateX(0vw);
+      transform: translateX(0px);
     }
     to {
       transform: translateX(100vw);
