--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,7 @@ body,
 #root {
   // height: 100%;
   /* overflow: hidden; */
+  overflow-x: hidden;
 }
 
 #root {
@@ -95,27 +96,31 @@ a img {
   background-image: url("./images/yellowbg.png");
   background-repeat: no-repeat;
   background-position: top right;
-  background-size: calc(50% - 1vw) calc(30% - 1vw);
+  background-size: 50%;
 
-  @media (max-width: 1300px) {
-    background-size: 50% 20%;
+  @media (max-width: 620px) {
+    background-size: 70%;
+
+  }
+  @media (max-width: 450px) {
+    background-size: 90%;
 
   }
 
-  @media (max-width: 1000px) {
-    background-size: 60% 20%;
+  // @media (max-width: 1000px) {
+  //   background-size: 60% 20%;
 
-  }
+  // }
 
-  @media (max-width: 600px) {
-    background-size: 60% 10%;
+  // @media (max-width: 600px) {
+  //   background-size: 60% 10%;
 
-  }
+  // }
 
-  @media (min-width: 1920px) {
-    background-size: 50vw 60vh
+  // @media (min-width: 1920px) {
+  //   background-size: 50vw 60vh
 
-  }
+  // }
 }
 
 .game-name {
@@ -233,7 +238,7 @@ a img {
   }
   @media screen and (max-width: 920px) {
     .yellow_btn {
-      padding: 0.5rem 1rem;
+      // padding: 0.5rem 1rem;
       width: 100%;
     }
   }
@@ -367,13 +372,14 @@ a img {
     border-radius: 500px;
     overflow: hidden;
     position: absolute;
-    background: #0D0D0D;
+    background: #0D0D0D!important;
     animation: loadingAnimation 3s ease-out infinite;
     
   }
   button{
     background: rgb(13, 13, 13);
     color: #fff100;
+    background: #0D0D0D!important;
     height: 100%;
     position: relative;
     z-index: 1;
@@ -446,7 +452,7 @@ a img {
 @media screen and (max-width: 920px) {
 
   .mob_element_open {
-    transform: translateX(0vw);
+    transform: translateX(0px);
 
     @include keyframes(openMobElement) {
       from {
@@ -454,7 +460,7 @@ a img {
       }
 
       to {
-        transform: translateX(0vw);
+        transform: translateX(0px);
       }
 
     }
@@ -467,7 +473,7 @@ a img {
 
     @include keyframes(closeMobElement) {
       from {
-        transform: translateX(0vw);
+        transform: translateX(0px);
       }
 
       to {
